Fix jumping market selector

--- a/sass/components/_chart-title.scss
+++ b/sass/components/_chart-title.scss
@@ -87,7 +87,9 @@
         .cq-symbol-info {
             display: flex;
             flex-direction: column;
-            margin: 0 10px 0 20px;
+            margin: 0 0 0 20px;
+            min-width: 15rem;
+            min-height: 4.2rem;
 
             .cq-market {
                 font-size: 1em;
@@ -114,6 +116,8 @@
             font-size: 1.6em;
             text-align: left;
             line-height: 24px;
+            width: auto;
+            padding-right: 1rem;
             @include themify($themes) {
                 color: themed('ChartTitleSymbolText');
             }
